--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/try.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/try.xhtml
@@ -7,26 +7,101 @@
                 template="/template/common/template.xhtml">
 
     <f:metadata>
-        <f:viewParam name="acct" value="#{tcmpb.beanAcctnum}"/>
         <f:event type="preRenderView" listener="#{tcmpb.preRenderView}"/>
     </f:metadata>
 
     <ui:define name="content">
-    <h:outputScript name="js/invCharts.js" library="#{uiLayout.cssDIR}"/>
 
         <!-- BOX START -->
         <h:form id="ceForm">
 
             <div class="layout-portlets-box">
-                <p:panel id="dPanel1" style="background: transparent; height:0px; border: 0px">
+                <p:panel id="dPanel1" style="background: transparent; border: 0px">
+                    <div class="Container100 Responsive100 t1">
+                        <div class="ContainerIndent">
+                            <p:commandButton value="Try"
+                                             actionListener="#{tcmpb.testRiskModel}"
+                                             update=":ceForm:dPanel1"/>
+                        </div>
+                    </div>
+                    <p:panel style="background: white; border: 1px"
+                            rendered="#{tcmpb.testArrayList != null}">
+                        <div class="EmptyBox10"></div>
+                        <p:separator></p:separator>
+                        <div class="EmptyBox20"></div>
+                        <p:dataTable id="singleDT" var="data" value="#{tcmpb.testArrayList}"
+                                     emptyMessage="No Risk Calculated."
+                                     reflow="true">
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Goal"
+                                      resizable="true">
+                                <h:outputText value="#{data.investmentobjective}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Age"
+                                      resizable="true">
+                                <h:outputText value="#{data.riskAge}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="ToRetire"
+                                      resizable="true">
+                                <h:outputText value="#{data.retireAge}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Horizon"
+                                      resizable="true">
+                                <h:outputText value="#{data.riskHorizon}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Ans3"
+                                      resizable="true">
+                                <h:outputText value="#{data.ans3}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Ans4"
+                                      resizable="true">
+                                <h:outputText value="#{data.ans4}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Ans5"
+                                      resizable="true">
+                                <h:outputText value="#{data.ans5}"/>
+                            </p:column>
+
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="AgeRisk"
+                                      resizable="true">
+                                <h:outputText value="#{data.riskValues[1]}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="HRisk"
+                                      resizable="true">
+                                <h:outputText value="#{data.riskValues[2]}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Risk3"
+                                      resizable="true">
+                                <h:outputText value="#{data.riskValues[3]}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Risk4"
+                                      resizable="true">
+                                <h:outputText value="#{data.riskValues[4]}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Risk5"
+                                      resizable="true">
+                                <h:outputText value="#{data.riskValues[5]}"/>
+                            </p:column>
+                            <p:column styleClass="TexAlLeft"
+                                      headerText="Total"
+                                      resizable="true">
+                                <h:outputText value="#{data.totalRisk}"/>
+                            </p:column>
+                        </p:dataTable>
+                    </p:panel>
                 </p:panel>
 
-                <div class="Container100 Responsive100 t1">
-                    <div class="ContainerIndent">
-                        <p:commandButton value="Try"
-                                         actionListener="#{tcmpb.testRiskModel}"/>
-                    </div>
-                </div>
 
             </div>
             <!-- BOX END -->
