--- a/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/index.xhtml
@@ -7,8 +7,8 @@
                 template="/template/common/template.xhtml">
 
     <f:metadata>
-        <f:viewParam name="acct" value="#{ctobean.beanAcctnum}"/>
-        <f:event type="preRenderView" listener="#{ctobean.preRenderView}"/>
+        <f:viewParam name="acct" value="#{tdcto.beanacctnum}"/>
+        <f:event type="preRenderView" listener="#{tdcto.startCTO}"/>
     </f:metadata>
 
     <ui:define name="content">
