TD CTO Version 1.21 - Revised 9/7/2016 Prashant

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
@@ -65,7 +65,7 @@
                     <div class="Container100 Fleft">
                         <div style="margin-top: 10px;">
                             <p:selectBooleanCheckbox
-                                    value="#{tdcto.tdMasterData.acctOwnersDetail.citizenshiId}"
+                                    value="#{tdcto.tdMasterData.acctOwnersDetail.citizenShipFlag}"
                                     styleClass="benCheckBox" itemLabel="USA Citizenship">
                             </p:selectBooleanCheckbox>
                         </div>
@@ -94,6 +94,7 @@
 
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
+                                 value="#{tdcto.tdMasterData.acctOwnersDetail.emailAddress}"
                                  placeholder="Email Address"
                                  required="false">
                     </p:inputMask>
@@ -172,7 +173,7 @@
                     <div class="Container100 Fleft">
                         <div style="margin-top: 10px;">
                             <p:selectBooleanCheckbox
-                                    value="#{tdcto.tdMasterData.acctOwnersDetail.citizenshiId}"
+                                    value="#{tdcto.tdMasterData.acctOwnersDetail.citizenShipFlag}"
                                     styleClass="benCheckBox" itemLabel="USA Citizenship">
                             </p:selectBooleanCheckbox>
                         </div>
@@ -200,6 +201,7 @@
 
                     <div class="EmptyBox5"></div>
                     <p:inputMask styleClass="Wid90 CustomWidthFA2 FS14 Mar5"
+                                 value="#{tdcto.tdMasterData.jointAcctOwnersDetail.emailAddress}"
                                  placeholder="Email Address"
                                  required="false">
                     </p:inputMask>
