--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
@@ -157,7 +157,7 @@
             which of the below range of returns would be most acceptable to you?-->
             Below is a simulation of
             the possible performance ranges over time of 5 hypothetical
-            portfolios at differing levels of risk – comparing the 5 options,
+            portfolios at differing levels of risk - comparing the 5 options,
             which range of uncertainty best matches your comfort level?
         </h3>
         <div class="EmptyBox5"></div>
